--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>Vishal Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="merge.css">
+<link rel="stylesheet" href="merge2.css">
 <link rel="stylesheet" href="Scrool animation/style.css"> 
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <body>
   <div class="firstpagecontainer">
     <div class="header">
@@ -23,7 +24,7 @@
       <div class="profile">
         <div class="profile-info">
           <div class="info">
-            <h1 style="font-family:'Bebas Neue',cursive;">
+            <h1 style="font-family:'Bebas Neue';">
               Vishal Patel
             </h1>
             <h5>
@@ -37,7 +38,7 @@
           </div>
         </div>
         <div class="info2">
-          <h1 style="font-family: 'Bebas Neue',cursive;">
+          <h1 style="font-family: 'Bebas Neue'">
             AI Engineer
           </h1>
           <h4>
