--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             AI Engineer
           </h1>
           <h4>
-            focusing on expanding my skills in AI, machine learning, and deep learning to build intelligent systems that solve real-world problems.
+            Focused on expanding my skills in AI, machine learning, and deep learning to build intelligent systems that solve real-world problems.
           </h4>
         </div>
       </div>
