--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Vishal Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="merge.css">
+<link rel="stylesheet" href="merge2.css">
 <link rel="stylesheet" href="Scrool animation/style.css"> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -24,10 +24,10 @@
       <div class="profile">
         <div class="profile-info">
           <div class="info">
-            <h1>
+            <h1 style="font-family:'Bebas Neue';">
               Vishal Patel
             </h1>
-            <h5>
+            <h5 class="text">
               Pursuing Bachelor of Engineering (B.E.) in Information Technology at Prof. Ram Meghe Institute of Technology and Research
             </h5>
           </div>
@@ -41,9 +41,9 @@
           <h1>
             AI Engineer
           </h1>
-          <h4>
-            Focused on expanding my skills in AI, machine learning, and deep learning to build intelligent systems that solve real-world problems.
-          </h4>
+          <h5 class ="text">
+            Pursuing Bachelor of Engineering (B.E.) in Information Technology at Prof. Ram Meghe Institute of Technology and Research
+          </h5>
         </div>
       </div>
     </div>
