--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <div class="profile">
         <div class="profile-info">
           <div class="info">
-            <h1 style="font-family:'Bebas Neue';">
+            <h1 style="font-family: Captain;"">
               Vishal Patel
             </h1>
-            <h5 class="text">
+            <h5 style="font-family: Captain;">
               Pursuing Bachelor of Engineering (B.E.) in Information Technology at Prof. Ram Meghe Institute of Technology and Research
             </h5>
           </div>
@@ -41,7 +41,7 @@
           <h1>
             AI Engineer
           </h1>
-          <h5 class ="text">
+          <h5 style="font-family: Captain;">
             Pursuing Bachelor of Engineering (B.E.) in Information Technology at Prof. Ram Meghe Institute of Technology and Research
           </h5>
         </div>
