--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             AI Engineer
           </h1>
           <h5 style="font-family: Captain;">
-            Pursuing Bachelor of Engineering (B.E.) in Information Technology at Prof. Ram Meghe Institute of Technology and Research
+            Focusing on expanding my skills in AI, machine learning, and deep learning to build intelligent systems that solve real-world problems.
           </h5>
         </div>
       </div>
